libs/@local/hashql/ast/tests/ui/lowering/import-resolver/continue/unresolved-type.jsonc
//@ run: pass
//@ description: Tests that an unresolved type is handled by dummy replacement, allowing lowering to continue.
[
  "type",
  "Foo",
  "T",
  //~^ ERROR Cannot find variable 'T'
  "_"
]
